slack, JIRA, confluence, google docs and github integrations added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,16 @@ name = "cyan-backend-integrations"
 version = "0.0.1"
 edition = "2024"
 description = "backend integrations with Slack, Confluence, github, JIRA and much more"
+
+[[bin]]
+name = "cyan-cli"
+path = "src/main.rs"
+
 [lib]
 crate-type = ["cdylib", "staticlib", "rlib"]
 
 [dependencies]
+clap = { version = "4.5", features = ["derive"] }
 tokio = { version = "1.48.0", features = ["full"] }
 reqwest = { version = "0.12.24", features = ["json"] }
 serde = "1.0.228"
