--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "cyan-backend-integrations"
 version = "0.0.1"
 edition = "2024"
-description = "backend integrations with Slack, Confluence, github, JIRA and much more"
+description = "Backend integrations with Slack, Confluence, github, JIRA and much more"
 
 [[bin]]
 name = "cyan-cli"
